--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,22 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Application</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</head>
-+
-<body style="background-color: black">
+    <style>
+        body{
+            background-color: black;
+        }
+        #font1{
+            color: red;
+        }
+        #font2{
+            color: forestgreen;
+        }
+        #font2:hover{
+            color: yellow;
+        }
+    </style>
 
+</head>
+
+<body>
 
 <div class="container-fluid text-center">
-    <h1 style="color: red">Welcome to EMS Project</h1>
-    <h2><a href="/employees" style="color: forestgreen">Manage Employees</a></h2>
+    <font face="Times New Roman" size="10"><h1 id="font1">Welcome to EMS Project</h1></font>
+    <font face="Times New Roman"><h2><a href="/employees" id="font2">Manage Employees</a></h2></font>
 </div>
 
-<div class="w-100 h-100 d-flex flex-column ">
+<div class="w-100 h-100 d-flex flex-column">
     <img src="https://www.jonesday.com/-/media/images/publications/2017/03/france-employees-and-digital-devices-outside-worki/extensionceogimageoverride/labor_employment.jpg?rev=efb7ff0629a04ce08f7de08d922bebb9&h=800&w=1600&la=en&hash=506C8F53714597114C7144A0EBB5FB98">
 </div>
 
